2005-04-13  Don Allingham  <don@gramps-project.org>
	* src/EditSource.py: allow double click on reference to bring up the referece
	editor
	* src/EventEdit.py: don't require a callback
	* src/ImageSelect.py: horrible hack for handling removing parent windows.
	Alex: HELP!
	* src/gramps_main.py: check for reentrancy into the undo handler
	* src/plugins/WebPage.py: fixed check on dialog run() return value,
	changed deprecated gtk.mainiteration to gtk.main_iteration
	* src/WriteGedcom.py: fixed problem with skipping events

2005-04-12  Don Allingham  <don@gramps-project.org>
	* src/FamilyView.py: commit family before people when committing
	new spouse.
	* src/EventEdit.py: more robust handler for new place after an edit

2005-04-12  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ArgHandler.py: Fixed typo

2005-04-11  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/plugins/ScratchPad.py: hook up to 'database-changed' signal
	so that pad is cleared when a new database is opened.

2005-04-11  Alex Roitman  <shura@gramps-project.org>
	* src/MergeData.py (on_merge_places_clicked): Commit event.

	* src/SourceView.py (button_press,build_context_menu): Work with
	multiple selections.

	* src/ArgHandler.py: Minor string changes.
	* src/DbPrompter.py: Minor string changes.
	* src/po/template.po: Update translation template.
	* src/po/ru.po: Some translation updates.

2005-04-11  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PedView.py (load_canvas): Catch bug of not existing family

	* src/plugins/Check.py: Fix events, that reference non existing places

	* src/plugins/ImportGeneWeb.py: Add line numbers to error messages;
	Support for "csrc" and "cbp" fields; Catch empty date

2005-04-10  Alex Roitman  <shura@gramps-project.org>
	* Release: Version 1.1.95 "When danger reared its ugly head,
	he bravely turned his tail and fled" released.
	* configure.in: Bump up the version number.

	* src/RelLib.py (BaseObject): add get_referenced_handles,